--- a/Prueba_Carlos_Rubio.ipynb
+++ b/Prueba_Carlos_Rubio.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "#Definimos la dirección de nuestra base de datos, en XXXXXXXX va la clave de postgresql\n",
-    "db_url = \"postgresql://postgres:Eyav=5va@localhost:5432/classicmodels\""
+    "db_url = \"postgresql://postgres:XXXXXXX@localhost:5432/classicmodels\""
    ]
   },
   {
